Fixing max height on mobile browsers (portrait)

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,12 @@ input {
 
     overflow: hidden;
 }
+@media screen and (max-width: 400px) {
+    .App {
+        height: 90vh;
+        max-width: 90vh;
+    }
+}
 
 #header {
     display: table;
